--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,5 @@ dependency-reduced-pom.xml
 platform-analytics/checkpoint
 platform-modules/analytics/streaming-models/literacy-level-computation/checkpoint
 quiz-app/resources
+quiz-app/www
 .classpath
