--- a/quiz-app/custom-plugins/GenieService/plugin.xml
+++ b/quiz-app/custom-plugins/GenieService/plugin.xml
@@ -22,6 +22,7 @@
         </config-file>
         <source-file src="src/android/GenieService.java" target-dir="src/" />
         <source-file src="src/android/TelemetryResponse.java" target-dir="src/" />
+        <source-file src="src/android/UserProfileResponse.java" target-dir="src/" />
         <resource-file src="libs/aidls-release.aar" target="libs" />
         <resource-file src="libs/sdks-debug.aar" target="libs" />
     </platform>
