--- a/platform-modules/analytics/batch-models/telemetry-data-migrator/pom.xml
+++ b/platform-modules/analytics/batch-models/telemetry-data-migrator/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.ekstep</groupId>
-	<artifactId>telemetry-data-transformer</artifactId>
+	<artifactId>telemetry-data-migrator</artifactId>
 	<version>1.0</version>
-	<name>telemetry-data-transformer</name>
+	<name>telemetry-data-migrator</name>
 
 	<properties>
 		<scala.version>2.10.5</scala.version>
@@ -34,6 +34,7 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.8.1</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
