--- a/platform-core/analytics-common/src/main/resources/config.properties
+++ b/platform-core/analytics-common/src/main/resources/config.properties
@@ -6,13 +6,13 @@ db.driverClassName=com.mysql.jdbc.Driver
 default.parallelization=10
 
 # Dev
-db.url=jdbc:mysql://localhost:3306/ekstep
-db.username=root
-db.password=
+#db.url=jdbc:mysql://localhost:3306/ekstep
+#db.username=root
+#db.password=
 spark_output_temp_dir=/Users/santhosh/ekStep/spark_data_files/tmp/
 
 # Sandbox configuration
-#db.url=jdbc:mysql://lp-sandbox-db.cm8jepwsnit8.ap-southeast-1.rds.amazonaws.com:3306/lp_analytics
-#db.username=lpsandboxdb
-#db.password=lp5andb0x
+db.url=jdbc:mysql://lp-sandbox-db.cm8jepwsnit8.ap-southeast-1.rds.amazonaws.com:3306/epproddb
+db.username=lpsandboxdb
+db.password=lp5andb0x
 #spark_output_temp_dir=/mnt/analytics/tmp/
