--- a/platform-modules/analytics/batch-models/aser-dashboard/src/main/resources/config.properties
+++ b/platform-modules/analytics/batch-models/aser-dashboard/src/main/resources/config.properties
@@ -6,7 +6,13 @@ db.driverClassName=com.mysql.jdbc.Driver
 default.parallelization=10
 
 # Dev
-spark_output_temp_dir=/Users/santhosh/ekStep/spark_data_files/tmp/
+#db.url=jdbc:mysql://localhost:3306/ekstep
+#db.username=root
+#db.password=
+spark_output_temp_dir=/Users/soma/Documents/ekStep/Scripts/ASER_AWS/tmp
 
 # Sandbox configuration
+db.url=jdbc:mysql://lp-sandbox-db.cm8jepwsnit8.ap-southeast-1.rds.amazonaws.com:3306/epproddb
+db.username=lpsandboxdb
+db.password=lp5andb0x
 #spark_output_temp_dir=/mnt/analytics/tmp/
