--- a/platform-modules/analytics/batch-models/telemetry-data-migrator/pom.xml
+++ b/platform-modules/analytics/batch-models/telemetry-data-migrator/pom.xml
@@ -30,11 +30,15 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-streaming-kafka_2.10</artifactId>
+			<version>${spark.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.8.1</version>
 		</dependency>
-
 	</dependencies>
 
 	<build>
