--- a/platform-modules/taxonomy/module/taxonomy-mgr/pom.xml
+++ b/platform-modules/taxonomy/module/taxonomy-mgr/pom.xml
@@ -25,5 +25,10 @@
 			<artifactId>aws-java-sdk-cloudfront</artifactId>
 			<version>1.9.20.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.5</version>
+		</dependency>
 	</dependencies>
 </project>
