--- a/platform-modules/taxonomy/module/taxonomy-service/pom.xml
+++ b/platform-modules/taxonomy/module/taxonomy-service/pom.xml
@@ -33,6 +33,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
