--- a/language-platform/module/indexes/pom.xml
+++ b/language-platform/module/indexes/pom.xml
@@ -7,11 +7,17 @@
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
-	<artifactId>language-common</artifactId>
+	<artifactId>language-indexes</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>com.ilimi</groupId>
 			<artifactId>graph-engine</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>language-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
@@ -21,15 +27,9 @@
 			<version>3.2.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch</artifactId>
-			<version>2.1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.ilimi</groupId>
-			<artifactId>common-service</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<scope>compile</scope>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>3.4</version>
 		</dependency>
 	</dependencies>
 </project>
