--- a/language-platform/pom.xml
+++ b/language-platform/pom.xml
@@ -20,6 +20,7 @@
 		<module>module/tools</module>
 		<module>module/controllers</module>
 		<module>module/common</module>
+		<module>module/indexes</module>
 	</modules>
 
 	<dependencies>
