--- a/platform-modules/service/module/ekstep-service/pom.xml
+++ b/platform-modules/service/module/ekstep-service/pom.xml
@@ -54,6 +54,12 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>language-indexes</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
 			<groupId>com.ilimi</groupId>
 			<artifactId>orchestrator-service</artifactId>
 			<version>1.0-SNAPSHOT</version>
