--- a/language-platform/module/indexes/pom.xml
+++ b/language-platform/module/indexes/pom.xml
@@ -32,4 +32,13 @@
 			<version>3.4</version>
 		</dependency>
 	</dependencies>
+	<build>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-dependency-plugin</artifactId>
+			<version>2.10</version>
+		</plugin>
+	</plugins>
+	</build>
 </project>
