--- a/platform-tests/functional-tests/pom.xml
+++ b/platform-tests/functional-tests/pom.xml
@@ -52,10 +52,16 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-      <groupId>com.jayway.restassured</groupId>
-      <artifactId>rest-assured</artifactId>
-      <version>2.8.0</version>
-      <scope>test</scope>
-</dependency>
+		      <groupId>com.jayway.restassured</groupId>
+		      <artifactId>rest-assured</artifactId>
+		      <version>2.8.0</version>
+		      <scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.8.8</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
