--- a/language-platform/module/controllers/pom.xml
+++ b/language-platform/module/controllers/pom.xml
@@ -41,6 +41,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.ekstep</groupId>
+			<artifactId>language-dictionary</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
 			<artifactId>language-indexes</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
