--- a/language-platform/module/common/src/main/resources/common.properties
+++ b/language-platform/module/common/src/main/resources/common.properties
@@ -1,9 +1,9 @@
 elastic-search-host=http://localhost
 elastic-search-port=9200
 ignoreStartWordsList=<Sentence,id=,<fs,head=,case_name=,paradigm=,name=,inf=
-tagNamesList=NN,NST,PRP,DEM,VM,VAUX,JJ,RB,PSP,RP,CC,WQ,QF,QC,QO,CL,INTF,INJ,NEG,SYM,*C,RDP,ECH,UNK,NP,VGF,VGNF,VGINF,VGNN,JJP,RBP,NEGP,CCP,FRAGP,BLK
-discardTokensList=NNP,((,))
+tagNamesList=NN,NST,PRP,DEM,VM,VAUX,JJ,RB,PSP,RP,CC,WQ,QF,QC,QO,CL,INTF,INJ,NEG,*C,RDP,ECH,UNK,NP,VGF,VGNF,VGINF,VGNN,JJP,RBP,NEGP,CCP,FRAGP,BLK
+discardTokensList=NNP,((,)),SYM
 attributesTagIdentifier=af
 specialCharRegEx=^([$&+,:;=?@#|!]*)$
 numberRegEx=^([+-]?\\d*\\.?\\d*)$
-defaultTokenCountAfterWord=4
+defaultTokenCountAfterWord=10
