--- a/platform-modules/taxonomy/module/taxonomy-mgr/src/test/resources/content.properties
+++ b/platform-modules/taxonomy/module/taxonomy-mgr/src/test/resources/content.properties
@@ -1,5 +1,5 @@
 #directory location where store unzip file
-dist.directory = /data/tmp/dist
+dist.directory = /data/tmp/dist/
 output.zipfile = /data/tmp/story.zip
-source.folder  = /data/tmp/temp2
-save.directory = /data/tmp/temp
+source.folder  = /data/tmp/temp2/
+save.directory = /data/tmp/temp/
