--- a/platform-tests/functional-tests/pom.xml
+++ b/platform-tests/functional-tests/pom.xml
@@ -63,5 +63,23 @@
 			<version>6.8.8</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>1.1.6</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>1.1.6</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+		</dependency>
+        
 	</dependencies>
 </project>
