--- a/language-platform/module/controllers/pom.xml
+++ b/language-platform/module/controllers/pom.xml
@@ -16,6 +16,11 @@
 			<version>2.4</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.ilimi</groupId>
 			<artifactId>taxonomy-mgr</artifactId>
 			<version>1.0-SNAPSHOT</version>
@@ -70,4 +75,16 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.15</version>
+				<configuration>
+					<argLine>-Dfile.encoding=UTF-8</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
