--- a/language-platform/module/indexes/pom.xml
+++ b/language-platform/module/indexes/pom.xml
@@ -16,6 +16,12 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>taxonomy-mgr</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>language-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
@@ -33,12 +39,20 @@
 		</dependency>
 	</dependencies>
 	<build>
-	<plugins>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-dependency-plugin</artifactId>
-			<version>2.10</version>
-		</plugin>
-	</plugins>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.10</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.15</version>
+				<configuration>
+					<argLine>-Dfile.encoding=UTF-8</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
