--- a/platform-modules/taxonomy/module/taxonomy-mgr/pom.xml
+++ b/platform-modules/taxonomy/module/taxonomy-mgr/pom.xml
@@ -30,5 +30,11 @@
 		    <artifactId>gson</artifactId>
 		    <version>2.5</version>
 		</dependency>
+		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>assessment-mgr</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 </project>
