--- a/searchIndex-platform/pom.xml
+++ b/searchIndex-platform/pom.xml
@@ -26,7 +26,9 @@
 		<module>module/searchindex-elasticsearch</module>
 		<module>module/searchindex-common</module>
 		<module>module/search-actors</module>
-                <module>module/search-api</module>
+        <module>module/search-api</module>
+        <module>module/composite-search-api</module>
+        <module>module/search-service</module>
 	</modules>
 
 	<dependencies>
