--- a/platform-devops/ansible/neo4j-backup.yml
+++ b/platform-devops/ansible/neo4j-backup.yml
@@ -4,7 +4,11 @@
         - name: create directory
           become: yes
           file: path=/mnt/backup/neo4j-backup state=directory
-        - name: Runt the command
-          command: chdir={{neo4j_home}} bin/neo4j-backup --from={{neo4j_machine}} --to=/mnt/backup/neo4j-backup
+        
+        - name: Run the cron
+          cron: name=backuptolocal minute=50 hour=23 state=present job="{{neo4j_home}}/bin/neo4j-backup --from={{neo4j_machine}} --to=/mnt/backup/neo4j-backup"
+
+        - name: Upload to s3
+          cron: name=Copytos3 minute=57 hour=23 state=present job="aws s3 cp "/mnt/backup/neo4j-backup" 
           
  
