--- a/platform-devops/ansible/roles/neo4j-cluster/tasks/main.yml
+++ b/platform-devops/ansible/roles/neo4j-cluster/tasks/main.yml
@@ -50,10 +50,13 @@
   become_user: learning
   shell: sh {{ user_home }}/stop_logstash_script1.sh
         
-
-- name: Copy the learning.zip file
+- name: Copy the kernel extension jar file
   become: yes
   copy: src={{ zip_file }} dest={{ neo4j_home }}/plugins/ owner=learning group=learning 
+
+  - name: Copy the custom procedures jar file
+  become: yes
+  copy: src={{ custom_procs_file }} dest={{ neo4j_home }}/plugins/ owner=learning group=learning 
 
 - name: Download th zip
   become: yes
