--- a/platform-devops/ansible/roles/neo4j-migration-import/tasks/main.yml
+++ b/platform-devops/ansible/roles/neo4j-migration-import/tasks/main.yml
@@ -8,9 +8,9 @@
        - language
   
 
-- name: Start the neo4j
+- name: Stop the neo4j
   command: chdir={{ neo4j_home }}/bin ./neo4j stop
-  when: "neo4j_process.stdout == '0'"
+  when: "neo4j_process.stdout != '0'"
   tags: 
        - learning
        - language
