--- a/platform-devops/ansible/roles/aws-login/tasks/main.yml
+++ b/platform-devops/ansible/roles/aws-login/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 # tasks file for aws-login
 - name: create .aws
+  become: yes
+  become_user: learning
   file: path={{ item.path }} state={{ item.state }}
   with_items:
      - { path: '.aws', state: 'directory' }
@@ -13,6 +15,8 @@
        - total
   
 - name: update .aws/credentials
+  become: yes
+  become_user: learning
   lineinfile: dest=.aws/credentials line='[default]'  state=present insertafter=EOF create=yes
   tags:
        - learning
@@ -22,6 +26,8 @@
        - total
  
 - name: update access_key from env var
+  become: yes
+  become_user: learning
   lineinfile: dest=.aws/credentials line='aws_access_key_id={{ lookup('env', 'lp_aws_access_key_id') }}'  insertafter=EOF state=present create=yes
   tags:
        - learning
@@ -31,6 +37,8 @@
        - total
 
 - name: update secret_key from env var 
+  become: yes
+  become_user: learning
   lineinfile: dest=.aws/credentials line='aws_secret_access_key={{ lookup('env', 'lp_aws_secret_access_key') }}' insertafter=EOF state=present  create=yes
   tags:
        - learning
