--- a/platform-devops/ansible/roles/aws-login/tasks/main.yml
+++ b/platform-devops/ansible/roles/aws-login/tasks/main.yml
@@ -2,11 +2,10 @@
 # tasks file for aws-login
 - name: create .aws
   become: yes
-  become_user: learning
-  file: path={{ item.path }} state={{ item.state }}
+  file: path={{ item.path }} state={{ item.state }} owner=learning group=learning
   with_items:
-     - { path: '.aws', state: 'directory' }
-     - { path: 'credentials', state: 'touch' }
+     - { path: '/home/learning/.aws', state: 'directory' }
+     - { path: '/home/learning/.aws/credentials', state: 'touch' }
   tags:
        - learning
        - language
@@ -16,8 +15,7 @@
   
 - name: update .aws/credentials
   become: yes
-  become_user: learning
-  lineinfile: dest=.aws/credentials line='[default]'  state=present insertafter=EOF create=yes
+  lineinfile: dest=/home/learning/.aws/credentials line='[default]'  state=present insertafter=EOF create=yes
   tags:
        - learning
        - language
@@ -28,7 +26,7 @@
 - name: update access_key from env var
   become: yes
   become_user: learning
-  lineinfile: dest=.aws/credentials line='aws_access_key_id={{ lookup('env', 'lp_aws_access_key_id') }}'  insertafter=EOF state=present create=yes
+  lineinfile: dest=/home/learning/.aws/credentials line='aws_access_key_id={{ lookup('env', 'lp_aws_access_key_id') }}'  insertafter=EOF state=present create=yes
   tags:
        - learning
        - language
@@ -39,7 +37,7 @@
 - name: update secret_key from env var 
   become: yes
   become_user: learning
-  lineinfile: dest=.aws/credentials line='aws_secret_access_key={{ lookup('env', 'lp_aws_secret_access_key') }}' insertafter=EOF state=present  create=yes
+  lineinfile: dest=/home/learning/.aws/credentials line='aws_secret_access_key={{ lookup('env', 'lp_aws_secret_access_key') }}' insertafter=EOF state=present  create=yes
   tags:
        - learning
        - language
