--- a/platform-devops/ansible/roles/neo4j-backup/tasks/main.yml
+++ b/platform-devops/ansible/roles/neo4j-backup/tasks/main.yml
@@ -1,34 +1,28 @@
 - name: Complete backup
+  become: yes
   file: path=/mnt/backup/neo4j-backup state=absent
   tags:
        - fullbackup
 
 - name: create directory
   become: yes
-  file: path={{item}} state=directory
+  file: path={{item}} state=directory owner=learning group=learning recurse=yes
   with_items:
              - /mnt/backup/neo4j-backup
   tags:
        - fullbackup
        - incrementalbackup
-        
-- name: Run the backup command
-  command: "{{neo4j_home}}"/bin/neo4j-backup --from={{neo4j_machine}} --to=/mnt/backup/neo4j-backup
-  tags:
-       - fullbackup
-       - incrementalbackup
-       
+
 - name: copy template of shell script to stop service
   become: yes
-  template: src=backup_script.j2 dest=/home/learning/backup_script.sh owner=learning group=learning
+  template: src=backup_script.j2 dest=/home/learning/backup_script.sh  mode=777 owner=learning group=learning
   tags:
        - fullbackup
        - incrementalbackup
-       
+
 - name: run script
   become: yes
   command: "/home/learning/backup_script.sh"
   tags:
        - fullbackup
        - incrementalbackup
-       
