--- a/platform-devops/ansible/roles/neo4j-backup/tasks/main.yml
+++ b/platform-devops/ansible/roles/neo4j-backup/tasks/main.yml
@@ -26,3 +26,19 @@
   tags:
        - fullbackup
        - incrementalbackup
+
+- name: ddd
+  become: yes
+  become_user: learning
+  template: src=copy_s3.j2 dest=/home/learning/copy_s3.sh  mode=777 owner=learning group=learning
+  tags:
+       - fullbackup
+       - incrementalbackup
+
+- name: run script
+  become: yes
+  become_user: learning
+  command: chdir="/home/learning" sh copy_s3.sh
+  tags:
+       - fullbackup
+       - incrementalbackup
