--- a/platform-devops/ansible/roles/neo4j-restore/tasks/main.yml
+++ b/platform-devops/ansible/roles/neo4j-restore/tasks/main.yml
@@ -15,18 +15,18 @@
   file: path=/home/learning/{{ neo4j_dir }}/neo4j-enterprise-3.0.4/data/databases/graph.db state=absent
 
 - name: Run the command s3
-  command: aws s3 cp s3://test-neo-backup/{{filename}} /mnt/backup/
+  command: aws s3 cp s3://test-neo-backup/{{filename}} /home/learning
   
 - name: Runt the command s3
-  unarchive: src=/mnt/backup/{{filename}} dest=/mnt/backup/ copy=no group={{user}} owner={{user}} creates=/mnt/backup/{{file}}
+  unarchive: src=/home/learning/{{filename}} dest=/home/learning/ copy=no group={{user}} owner={{user}} creates=/home/learning/{{file}}
 
 - name: absent the folder
-  file: path=/mnt/backup/neo4j-backup state=absent
+  file: path=/home/learning/neo4j-backup state=absent
   
 - name: add the file 
-  comamnd: mv /mnt/backup/{{file}} /mnt/backup/neo4j-backup
+  comamnd: mv /home/learning/{{file}} /home/learning/neo4j-backup
   
 - name: Runt the command local
-  command: chdir={{neo4j_home}} bin/neo4j-admin restore --from=/mnt/backup/neo4j-backup --database=graph.db --force
+  command: chdir={{neo4j_home}} bin/neo4j-admin restore --from=/home/learning/neo4j-backup --database=graph.db --force
         
  
