--- a/docs/domain_model_v2/api-docs/swagger/definitions_api/definitions_apis.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/definitions_api/definitions_apis.yaml
@@ -1,6 +1,6 @@
 swagger: '2.0'
 info:
-  version: '2.0'
+  version: '3.0'
   title: Definitions
   description: >-
     The Definitions API of EkStep Learning Platform provides details of
@@ -8,7 +8,7 @@ info:
   license:
     name: EkStep License
     url: 'http:www.EkStep.in'
-basePath: /v3
+basePath: /meta/v3
 host: api.ekstep.in
 securityDefinitions: {}
 schemes:
