--- a/platform-core/graph-engine/module/cache-manager-api/pom.xml
+++ b/platform-core/graph-engine/module/cache-manager-api/pom.xml
@@ -11,7 +11,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.ilimi</groupId>
-			<artifactId>graph-dac-api</artifactId>
+			<artifactId>graph-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
