--- a/platform-core/graph-engine/module/graph-dac-api/pom.xml
+++ b/platform-core/graph-engine/module/graph-dac-api/pom.xml
@@ -11,6 +11,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.ilimi</groupId>
+			<artifactId>graph-cache-mgr</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.ilimi</groupId>
 			<artifactId>graph-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
