--- a/platform-jobs/samza/distribution/pom.xml
+++ b/platform-jobs/samza/distribution/pom.xml
@@ -25,14 +25,15 @@
 		</dependency>
 		<dependency>
 			<groupId>org.ekstep</groupId>
-			<artifactId>content-enrichment</artifactId>
+			<artifactId>publish-pipeline</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>tar.gz</type>
 			<classifier>distribution</classifier>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>org.ekstep</groupId>
-			<artifactId>publish-pipeline</artifactId>
+			<artifactId>content-enrichment</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>tar.gz</type>
 			<classifier>distribution</classifier>
@@ -64,7 +65,7 @@
 			<version>1.0-SNAPSHOT</version>
 			<type>tar.gz</type>
 			<classifier>distribution</classifier>
-		</dependency>
+		</dependency> -->
     </dependencies>
     <build>
         <plugins>
