--- a/platform-jobs/samza/audit-history-indexer/pom.xml
+++ b/platform-jobs/samza/audit-history-indexer/pom.xml
@@ -13,6 +13,7 @@
 		<hadoop.version>2.6.2</hadoop.version>
 	</properties>
 	<artifactId>audit-history-indexer</artifactId>
+	<version>1.0</version>
 	<dependencies>
 		<dependency>
 			<groupId>com.ilimi</groupId>
