--- a/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
+++ b/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
@@ -8,7 +8,7 @@ yarn.package.path=http://__yarn_host__:__yarn_port__/__env__/${project.artifactI
 # Metrics
 metrics.reporters=snapshot,jmx
 metrics.reporter.snapshot.class=org.apache.samza.metrics.reporter.MetricsSnapshotReporterFactory
-metrics.reporter.snapshot.stream=kafka.__env__.lp.metrics
+metrics.reporter.snapshot.stream=kafka.__env__.metrics
 metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
