--- a/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
+++ b/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
@@ -35,3 +35,5 @@ job.coordinator.replication.factor=1
 # Job specific config properties
 elastic-search-host=__es_host__
 elastic-search-port=__es_port__
+platform-api-url={{platform-api-url}}
+ekstepPlatformApiUserId=ilimi
