--- a/platform-modules/service/src/main/resources/graph.properties
+++ b/platform-modules/service/src/main/resources/graph.properties
@@ -15,5 +15,5 @@ route.bolt.write.all=bolt://localhost:7687
 route.bolt.read.all=bolt://localhost:7687
 route.bolt.comment.all=bolt://localhost:7687
 shard.id=1
-platform.data.node.cacheable.properties=versionKey,consumerId
 platform.auth.check.enabled=false
+platform.cache.ttl=3600000
